--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "chartjs-adapter-date-fns": "^3.0.0",
-    "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-annotation": "^3.0.1",
     "chartjs-plugin-zoom": "^2.0.1",
     "date-fns": "^2.30.0",
     "firebase": "^9.22.2",
     "lightweight-charts": "^4.0.1",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
+    "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
     "react-bootstrap": "^2.7.4",
@@ -64,5 +65,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "chartjs-adapter-moment": "^1.0.1",
+    "moment": "^2.29.4"
   }
 }
