--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/styles": "^4.11.5",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@mui/styles": "^5.13.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -38,6 +39,7 @@
     "react-scripts": "5.0.1",
     "react-with-firebase-auth": "^1.4.1",
     "socket.io-client": "^4.6.2",
+    "swiper": "^9.4.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zod": "^3.21.4"
