--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "react-with-firebase-auth": "^1.4.1",
     "socket.io-client": "^4.6.2",
     "swiper": "^9.4.1",
