--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-alice-carousel": "^2.7.1",
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
+    "react-collapsed": "^4.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
