--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@firebase/firestore": "^4.0.0",
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
@@ -40,6 +41,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "react-with-firebase-auth": "^1.4.1",
+    "reactive-button": "^1.3.15",
     "socket.io-client": "^4.6.2",
     "swiper": "^9.4.1",
     "typescript": "^4.9.5",
