--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
     "react-collapsed": "^4.0.2",
+    "react-confirm-toast": "^1.0.7",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
@@ -43,6 +44,7 @@
     "react-with-firebase-auth": "^1.4.1",
     "reactive-button": "^1.3.15",
     "socket.io-client": "^4.6.2",
+    "sweetalert": "^2.1.2",
     "swiper": "^9.4.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
